--- a/src/styles/tracks/responsive.css
+++ b/src/styles/tracks/responsive.css
@@ -18,11 +18,11 @@
   }
 
   .song-list-row {
-    grid-template-columns: 64px minmax(0, 1.5fr) minmax(0, 1fr) 56px;
+    grid-template-columns: 64px minmax(0, 1.5fr) minmax(0, 1fr) 64px;
   }
 
   .song-list-row--with-bpm {
-    grid-template-columns: 64px minmax(0, 1.5fr) minmax(0, 1fr) 48px 56px;
+    grid-template-columns: 64px minmax(0, 1.5fr) minmax(0, 1fr) 48px 64px;
   }
 
   .song-list-row-cell:nth-child(4),  /* album */
